--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <body>
 <div id="app">
   <div id="navbar"></div>
-  <div id="main-container">
-    <div id="doc-title-section">
-
-    </div>
+  <div id="main-content">
   </div>
   <div id="footer">
 
