레이아웃 적용

--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
   <link rel="styleseet" href="dist/index.css">
 </head>
 <body>
+
+<style>
+
+  .el-aside {
+    background-color: #D3DCE6;
+    color: #333;
+    text-align: center;
+    line-height: 200px;
+  }
+
+</style>
+
 <div id="app">
-  <div id="navbar"></div>
-  <div id="main-content">
-  </div>
-  <div id="footer">
-
-
-  </div>
+   <main></main>
 </div>
 <script src="dist/build.js"></script>
 </body>
