--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 
 <style>
 
-  body {
-    margin: 0
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
   }
-
-
   .el-aside {
-    background-color: #D3DCE6;
     color: #333;
-    text-align: center;
-    line-height: 200px;
+    text-align: left;
   }
 
 </style>
