PRC-999K, 야전교범 완성

--- a/PRC-999K.html
+++ b/PRC-999K.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>PRC-999K</title>
-</head>
-<body>
-<div class="wiki-category">
-  <h2>분류</h2>
-  <ul>
 
-    <li><a href="#">무전기</a></li>
 
-    <li><a href="#">무선통신</a></li>
-
-  </ul>
+<div id="catlinks" class="catlinks" data-mw="interface">
+  <div id="mw-normal-catlinks" class="mw-normal-catlinks"><a href="#"
+                                                             title="특수:분류">분류</a>:
+    <ul>
+      <li><a href="#" >무전기</a></li>
+      <li><a href="#" >무선통신</a></li>
+    </ul>
+  </div>
 </div>
+<div class="clear"></div>
 
 
 <div class="wiki-content clearfix">
@@ -22,32 +17,8 @@
 
   <div class="wiki-inner-content">
 
+    <table class="wiki-table" style=""><tbody><tr><td style="text-align:center;"><p><a class="wiki-link-internal" href="/w/%ED%8C%8C%EC%9D%BC:attachment/PRC-999K/36660.jpg" title="파일:attachment/PRC-999K/36660.jpg"><span class="wiki-image-align-normal"><span class="wiki-image-wrapper"><img class="wiki-image-space" src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjUwIiBoZWlnaHQ9IjM3NCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48L3N2Zz4="><img class="wiki-image" src="./src/img/prc-999k-1.jpg" data-filesize="70309" data-src="//cdn.namuwikiusercontent.com/s/d27933255047bbb19806203d480e99202db9821afe9282d4f18dd69817df2475657f36e5c81e26f0a4ad61f6bc9c5dbd272b66bbb0be0b5f6960f156043cb9fb073e1a4c4c23d47d27df4d985641ac25?e=1543435575&amp;k=rfOJQGMYJqGBSaU5hWMcTQ" alt="파일:attachment/PRC-999K/36660.jpg"><noscript><img class='wiki-image' src='//cdn.namuwikiusercontent.com/s/d27933255047bbb19806203d480e99202db9821afe9282d4f18dd69817df2475657f36e5c81e26f0a4ad61f6bc9c5dbd272b66bbb0be0b5f6960f156043cb9fb073e1a4c4c23d47d27df4d985641ac25?e=1543435575&amp;k=rfOJQGMYJqGBSaU5hWMcTQ' alt='파일:attachment/PRC-999K/36660.jpg'></noscript></span></span></a></p></td></tr><tr><td style="text-align:center;"><p>위 사진에서 장병들이 조작하고 있는 무전기.</p></td></tr></tbody></table>
 
-    <div class="wiki-table-wrap">
-      <table class="wiki-table" style="">
-        <tbody>
-        <tr>
-          <td style="text-align:center;">
-            <p><a class="wiki-link-internal" href="/w/%ED%8C%8C%EC%9D%BC:attachment/PRC-999K/36660.jpg"
-                  title="파일:attachment/PRC-999K/36660.jpg"><span class="wiki-image-align-normal"><span
-              class="wiki-image-wrapper"><img class="wiki-image-space"
-                                              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjUwIiBoZWlnaHQ9IjM3NCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48L3N2Zz4="><img
-              class="wiki-image"
-              src="//cdn.namuwikiusercontent.com/s/d27933255047bbb19806203d480e99202db9821afe9282d4f18dd69817df2475657f36e5c81e26f0a4ad61f6bc9c5dbd272b66bbb0be0b5f6960f156043cb9fb073e1a4c4c23d47d27df4d985641ac25?e=1543435575&amp;k=rfOJQGMYJqGBSaU5hWMcTQ"
-              data-filesize="70309"
-              data-src="//cdn.namuwikiusercontent.com/s/d27933255047bbb19806203d480e99202db9821afe9282d4f18dd69817df2475657f36e5c81e26f0a4ad61f6bc9c5dbd272b66bbb0be0b5f6960f156043cb9fb073e1a4c4c23d47d27df4d985641ac25?e=1543435575&amp;k=rfOJQGMYJqGBSaU5hWMcTQ"
-              alt="파일:attachment/PRC-999K/36660.jpg"><noscript><img class='wiki-image'
-                                                                    src='//cdn.namuwikiusercontent.com/s/d27933255047bbb19806203d480e99202db9821afe9282d4f18dd69817df2475657f36e5c81e26f0a4ad61f6bc9c5dbd272b66bbb0be0b5f6960f156043cb9fb073e1a4c4c23d47d27df4d985641ac25?e=1543435575&amp;k=rfOJQGMYJqGBSaU5hWMcTQ'
-                                                                    alt='파일:attachment/PRC-999K/36660.jpg'></noscript></span></span></a>
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td style="text-align:center;"><p>위 사진에서 장병들이 조작하고 있는 무전기.</p></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
     <p></p>
 
     <p></p>
@@ -144,6 +115,7 @@
     <h3 class="wiki-heading" style="cursor: pointer;"><a id="s-3.1" href="#toc">3.1.</a> 송수신기 RT-314K<span
       class="wiki-edit-section"><a href="/edit/PRC-999K?section=4" rel="nofollow">[편집]</a></span></h3>
     <div class="wiki-heading-content">
+      <img src="./src/img/prc-999k-RT314K-1.jpg">
       <p><a class="wiki-link-external"
             href="http://www.g2b.go.kr:8100/retrieveResult.do?cmd=READ&amp;retrieveEntCls=4&amp;retrieveEntID=20458716"
             target="_blank" rel="noopener"
@@ -162,7 +134,7 @@
         class="wiki-image-wrapper"><img class="wiki-image-space"
                                         src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMzUwIiBoZWlnaHQ9IjI4MiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48L3N2Zz4="><img
         class="wiki-image"
-        src="//cdn.namuwikiusercontent.com/s/b52e302a8141c9c14c8127760cbc1359133b852d5aef7fac90c9b6bbdd467a5453a90b6b05c0b2112812a5bedc604d01edcec9b3a84167cfee9cb5b8cf34279558549d37702e149a6027f1a7d9b9f259?e=1545764688&amp;k=vKyqLU4cMnVOJf3MNhgc1Q"
+        src="./src/img/prc-999k-2.jpg"
         data-filesize="72644"
         data-src="//cdn.namuwikiusercontent.com/s/b52e302a8141c9c14c8127760cbc1359133b852d5aef7fac90c9b6bbdd467a5453a90b6b05c0b2112812a5bedc604d01edcec9b3a84167cfee9cb5b8cf34279558549d37702e149a6027f1a7d9b9f259?e=1545764688&amp;k=vKyqLU4cMnVOJf3MNhgc1Q"
         alt="파일:attachment/PRC-999K/Jige.jpg"><noscript><img class='wiki-image'
@@ -304,7 +276,7 @@
         class="wiki-image-wrapper"><img class="wiki-image-space"
                                         src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTM0IiBoZWlnaHQ9IjEwNSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48L3N2Zz4="><img
         class="wiki-image"
-        src="//cdn.namuwikiusercontent.com/s/f7f42e7e53541a470ecfdc7c8526933ada01eacd5ff6c0e8173ae15807c994e7bffc22e760b8139dfbec5a1cf4ae7dbf02203659810b44c2328f7f487efe72a9887a686d566e6dd4ed85e429a7e278b3?e=1542188725&amp;k=hTeUid_n3cIThqHyvADhKQ"
+        src="./src/img/prc-999k-3.jpg"
         data-filesize="5532"
         data-src="//cdn.namuwikiusercontent.com/s/f7f42e7e53541a470ecfdc7c8526933ada01eacd5ff6c0e8173ae15807c994e7bffc22e760b8139dfbec5a1cf4ae7dbf02203659810b44c2328f7f487efe72a9887a686d566e6dd4ed85e429a7e278b3?e=1542188725&amp;k=hTeUid_n3cIThqHyvADhKQ"
         alt="파일:attachment/PRC-999K/PP-2K.jpg"><noscript><img class='wiki-image'
@@ -481,7 +453,7 @@
         class="wiki-image-wrapper"><img class="wiki-image-space"
                                         src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMzIwIiBoZWlnaHQ9IjI0MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48L3N2Zz4="><img
         class="wiki-image"
-        src="//cdn.namuwikiusercontent.com/s/5655832e294469b87c9b95a06e95dadeaec4ea4957e6945bf624084e18a2f6ee576809238675114fb97726b66b047aec6ea2b4d5ff1dadf2a596e4b00dbbf83ecccc6a6268a0191e5069fae3b1876218?e=1544863350&amp;k=7kCgE3b-W1-PjYa3d56_1Q"
+        src="./src/img/prc-999k-4.jpg"
         data-filesize="9862"
         data-src="//cdn.namuwikiusercontent.com/s/5655832e294469b87c9b95a06e95dadeaec4ea4957e6945bf624084e18a2f6ee576809238675114fb97726b66b047aec6ea2b4d5ff1dadf2a596e4b00dbbf83ecccc6a6268a0191e5069fae3b1876218?e=1544863350&amp;k=7kCgE3b-W1-PjYa3d56_1Q"
         alt="파일:attachment/PRC-999K/PRC-999KEC.jpg"><noscript><img class='wiki-image'
@@ -503,16 +475,13 @@
       <p>* PRC-119E(1998), PRC-119F(2006), PRC-119G(2010) / RT-1523 (미국)<br><a class="wiki-link-internal"
                                                                                href="/w/%ED%8C%8C%EC%9D%BC:external/blogs.oregonstate.edu/hires_061207-A-0350A-010.jpg"
                                                                                title="파일:external/blogs.oregonstate.edu/hires_061207-A-0350A-010.jpg"><span
-        class="wiki-image-align-normal" style="width:200px;"><span class="wiki-image-wrapper" style="width: 100%;"><img
-        class="wiki-image-space"
-        src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjUwIiBoZWlnaHQ9IjM4MSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48L3N2Zz4="
-        width="100%"><img class="wiki-image"
-                          src="//cdn.namuwikiusercontent.com/s/476e0331b33a84a8f6ffd91f678d51b09bdbda8c953fbe5f0c203b97862bfcaa2534a3cc7749bec29e96df2f07ec31880f85376e2713b0f85bff3cf3b23e656ef5654c9d2a2e9be55933a5cbeb2bffc1?e=1541243256&amp;k=V9Esaayk0KlYPR7c0_myiw"
-                          data-filesize="33070"
-                          data-src="//cdn.namuwikiusercontent.com/s/476e0331b33a84a8f6ffd91f678d51b09bdbda8c953fbe5f0c203b97862bfcaa2534a3cc7749bec29e96df2f07ec31880f85376e2713b0f85bff3cf3b23e656ef5654c9d2a2e9be55933a5cbeb2bffc1?e=1541243256&amp;k=V9Esaayk0KlYPR7c0_myiw"
-                          alt="파일:external/blogs.oregonstate.edu/hires_061207-A-0350A-010.jpg" width="100%"><noscript><img
+        class="wiki-image-align-normal" style="width:200px;"><span class="wiki-image-wrapper" style="width: 340px;"><img class="wiki-image"
+                                                                                                                         src="./src/img/prc-999k-5.jpg"
+                                                                                                                         data-filesize="33070"
+                                                                                                                         data-src="//cdn.namuwikiusercontent.com/s/476e0331b33a84a8f6ffd91f678d51b09bdbda8c953fbe5f0c203b97862bfcaa2534a3cc7749bec29e96df2f07ec31880f85376e2713b0f85bff3cf3b23e656ef5654c9d2a2e9be55933a5cbeb2bffc1?e=1541243256&amp;k=V9Esaayk0KlYPR7c0_myiw"
+                                                                                                                         alt="파일:external/blogs.oregonstate.edu/hires_061207-A-0350A-010.jpg" width="340px"><noscript><img
         class='wiki-image' width='100%'
-        src='//cdn.namuwikiusercontent.com/s/476e0331b33a84a8f6ffd91f678d51b09bdbda8c953fbe5f0c203b97862bfcaa2534a3cc7749bec29e96df2f07ec31880f85376e2713b0f85bff3cf3b23e656ef5654c9d2a2e9be55933a5cbeb2bffc1?e=1541243256&amp;k=V9Esaayk0KlYPR7c0_myiw'
+        src='./src/img/prc-999k-5.jpg'
         alt='파일:external/blogs.oregonstate.edu/hires_061207-A-0350A-010.jpg'></noscript></span></span></a><br></p>
     </div>
     <h2 class="wiki-heading" style="cursor: pointer;"><a id="s-8" href="#toc">8.</a> 기타<span
@@ -656,5 +625,128 @@
 </div>
 
 
-</body>
-</html>
+
+<style>
+  /* CSS는 원본의 형식을 그대로 따름 */
+  .wiki-macro-footnote {
+    margin: 2em 0;
+    padding: 2em 0;
+    border-top: 1px solid #777777;
+  }
+  .footnote-list {
+
+    line-height: 2em;
+    display: block;
+
+  }
+  .wiki-edit-section{
+    display:none;
+  }
+  a {
+
+    color: #0275d8;
+    text-decoration: none;
+
+  }
+  .wiki-table {
+
+    background-color: #f5f5f5;
+    border-collapse: collapse;
+    margin: 10px 0;
+
+  }
+  .wiki-table td {
+
+    padding: 5px 10px;
+    border: 1px solid #dddddd;
+
+  }
+  table.diff tbody, .popover, .tooltip {
+
+    font-family: "Open Sans", arial, 'Apple SD Gothic Neo', 'Noto Sans CJK KR', '본고딕', 'KoPubDotum Medium', '나눔바른고딕', '나눔고딕', 'NanumGothic', '맑은고딕', 'Malgun Gothic', sans-serif;
+
+  }
+  .wiki-table td p {
+
+    margin: 2px;
+
+  }
+  .wiki-article .wiki-image {
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+  }
+  .wiki-image-space
+  {
+    display:none;
+  }
+  .wiki-link-external {
+
+     color: #090;
+
+   }
+  .wiki-link-external::before {
+
+      padding: 0px 0.15em;
+      background: green;
+      color: white;
+      content: "\1F517";
+
+    }
+  .wiki-heading{
+    border-bottom: 1px solid #CCC;
+    padding-bottom: 5px;
+    padding-top:10px;
+    clear: both;
+
+  }
+
+  .catlinks {
+
+    border: 1px solid #e1e8ed;
+    padding: 0.4rem;
+    /* padding-left: 0.4rem;
+    padding-left: 1rem; */
+    box-shadow: 0.15rem 0.15rem 0 0 #cfdae2;
+    margin-bottom: 0.8rem;
+    border-radius: 0.35rem;
+    display: inline-block;
+    /* width:100% */
+
+  }
+  .catlinks ul {
+
+    display: inline;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    list-style-image: none;
+    list-style-type: none;
+    list-style-type: none;
+    list-style-image: none;
+    vertical-align: middle !ie;
+
+  }
+  .catlinks li:first-child {
+
+    padding-left: 0.25em;
+    border-left: none;
+
+  }
+  .catlinks li {
+
+    display: inline-block;
+    line-height: 1.25em;
+    border-left: 1px solid #AAA;
+    margin: 0.125em 0;
+    padding: 0 0.2em;
+    padding-left: 0.5em;
+    zoom: 1;
+    display: inline !ie;
+
+  }
+</style>
