--- a/야전교범.html
+++ b/야전교범.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>야전교범</title>
-
-</head>
-<body>
 <div class="liberty-content-main">
   <div id="catlinks" class="catlinks" data-mw="interface">
     <div id="mw-normal-catlinks" class="mw-normal-catlinks"><a href="#"
@@ -16,45 +8,26 @@
       </ul>
     </div>
   </div>
-  <h1 class="docTitle">야전교범</h1>
-  <div class="el-button-group controlButtons">
-    <button type="button" class="el-button el-button--primary el-button--mini"><!----><i
-      class="el-icon-question"></i><span>질의응답</span></button>
-    <button type="button" class="el-button el-button--primary el-button--mini"><!----><i class="el-icon-info"></i><span>역사</span>
-    </button>
-    <button type="button" class="el-button el-button--primary el-button--mini"><!----><i class="el-icon-edit"></i><span>편집</span>
-    </button>
-    <button type="button" class="el-button el-button--primary el-button--mini"><!----><i
-      class="el-icon-delete"></i><span>삭제</span></button>
-  </div>
   <div class="clear"></div>
   <p><big>敎範 / manual</big>
   </p>
-  <h2><span class="mw-headline" id=".EA.B0.9C.EC.9A.94"><span class="mw-headline-number">1</span> 개요</span><span
+  <h2><span class="mw-headline" id=".EA.B0.9C.EC.9A.94"><span class="mw-headline-number"><a href="#">1.</a> 개요</span><span
     class="mw-editsection"><span class="mw-editsection-bracket">[</span><a
     href="#" title="부분 편집: 개요">편집</a><span
     class="mw-editsection-bracket">]</span></span></h2>
   <p>가르치는 방법, 또는 그것을 기록한 책.
   </p>
-  <h2><span class="mw-headline" id=".EA.B5.B0.EB.8C.80.EC.97.90.EC.84.9C"><span class="mw-headline-number">2</span> 군대에서</span><span
+  <h2><span class="mw-headline" id=".EA.B5.B0.EB.8C.80.EC.97.90.EC.84.9C"><span class="mw-headline-number"><a href="#">2.</a> </span> 군대에서</span><span
     class="mw-editsection"><span class="mw-editsection-bracket">[</span><a
     href="#" title="부분 편집: 군대에서">편집</a><span
     class="mw-editsection-bracket">]</span></span></h2>
-  <div class="thumb tright">
-    <div class="thumbinner" style="width:302px;"><a
-      href="#" class="image"><img
-      alt=""
-      src="https://librewiki.net/images/thumb/9/98/%EB%B0%80%EB%A6%AC%EB%9D%BC%EC%9D%B4%EB%B8%8C-1%EA%B6%8C.jpg/300px-%EB%B0%80%EB%A6%AC%EB%9D%BC%EC%9D%B4%EB%B8%8C-1%EA%B6%8C.jpg"
-      class="thumbimage"
-      width="300" height="420"></a>
-      <div class="thumbcaption">
-        <div class="magnify"><a
-          href="#" class="internal"
-          title="실제 크기로"></a></div>
-        야전교범을 패러디한 <a href="#" title="밀리라이브">밀리라이브</a> 단행본
-      </div>
-    </div>
-  </div>
+
+  <div class="wiki-table-wrap"><table class="wiki-table" style=""><tbody><tr><td style="text-align:center;"><p><a class="wiki-link-internal" href="/w/%ED%8C%8C%EC%9D%BC:attachment/PRC-999K/36660.jpg" title="파일:attachment/PRC-999K/36660.jpg"><span class="wiki-image-align-normal"><span class="wiki-image-wrapper"><img class="wiki-image-space" src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjUwIiBoZWlnaHQ9IjM3NCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48L3N2Zz4="><img class="wiki-image" src="./src/img/300px-밀리라이브-1권.jpg" data-src="//cdn.namuwikiusercontent.com/s/d27933255047bbb19806203d480e99202db9821afe9282d4f18dd69817df2475657f36e5c81e26f0a4ad61f6bc9c5dbd272b66bbb0be0b5f6960f156043cb9fb073e1a4c4c23d47d27df4d985641ac25?e=1543435575&amp;k=rfOJQGMYJqGBSaU5hWMcTQ" alt="파일:attachment/PRC-999K/36660.jpg"><noscript><img class='wiki-image' src='//cdn.namuwikiusercontent.com/s/d27933255047bbb19806203d480e99202db9821afe9282d4f18dd69817df2475657f36e5c81e26f0a4ad61f6bc9c5dbd272b66bbb0be0b5f6960f156043cb9fb073e1a4c4c23d47d27df4d985641ac25?e=1543435575&amp;k=rfOJQGMYJqGBSaU5hWMcTQ' alt='파일:attachment/PRC-999K/36660.jpg'></noscript></span></span></a></p></td></tr><tr><td style="text-align:center;">야전교범을 패러디한 <a href="#" title="밀리라이브">밀리라이브</a> 단행본</td></tr></tbody></table></div>
+
+
+
+
+
   <p><a href="#" title="군대">군대</a>의 교범은 <a href="#" title="군인">군인</a>이
     습득해야 할 지식을 기록한 서적으로, 크게 야전교범과 기술교범으로 나뉜다. 내용의 보안 등급에 따라 통제교범, 준통제교범, 관리교범, 기타교범 등으로 다시 세분화된다. 작전계(교육계)에서 관리하며 전시에
     돌입하면 휴대하는 물량을 제외하고 전량 파기한다. 기본적으로 '누구나 이해가능한 내용'을 목표로 하지만 주특기 야전교범이나 기술교범은 어지간한 고등학교 지식으로 덤비기 힘든 내용이 나오기도 한다.
@@ -83,6 +56,98 @@
 
 
 </div>
+<style>
+  /*CSS는 원본의 형식을 그대로 따름*/
+  .wiki-table {
+    background-color: #f5f5f5;
+    border-collapse: collapse;
+    margin: 10px 0;
 
-</body>
-</html>
+  }
+  .wiki-table td {
+
+    padding: 5px 10px;
+    border: 1px solid #dddddd;
+
+  }
+  table.diff tbody, .popover, .tooltip {
+
+    font-family: "Open Sans", arial, 'Apple SD Gothic Neo', 'Noto Sans CJK KR', '본고딕', 'KoPubDotum Medium', '나눔바른고딕', '나눔고딕', 'NanumGothic', '맑은고딕', 'Malgun Gothic', sans-serif;
+
+  }
+  .wiki-table td p {
+
+    margin: 2px;
+
+  }
+  .wiki-image-space
+  {
+    display:none;
+  }
+
+  .mw-editsection
+  {
+    display:none;
+  }
+
+  a
+  {
+
+    color: #0275d8;
+    text-decoration: none;
+
+  }
+  h2
+  {
+
+    border-bottom: 1px solid #CCC;
+    padding-bottom: 5px;
+    padding-top:10px;
+    clear: both;
+
+  }
+  .catlinks {
+
+    border: 1px solid #e1e8ed;
+    padding: 0.4rem;
+    /* padding-left: 0.4rem;
+    padding-left: 1rem; */
+    box-shadow: 0.15rem 0.15rem 0 0 #cfdae2;
+    margin-bottom: 0.8rem;
+    border-radius: 0.35rem;
+    display: inline-block;
+    /* width:100% */
+
+  }
+  .catlinks ul {
+
+    display: inline;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    list-style-image: none;
+    list-style-type: none;
+    list-style-type: none;
+    list-style-image: none;
+    vertical-align: middle !ie;
+
+  }
+  .catlinks li:first-child {
+
+    padding-left: 0.25em;
+    border-left: none;
+
+  }
+  .catlinks li {
+
+     display: inline-block;
+     line-height: 1.25em;
+     border-left: 1px solid #AAA;
+     margin: 0.125em 0;
+     padding: 0 0.2em;
+     padding-left: 0.5em;
+     zoom: 1;
+     display: inline !ie;
+
+   }
+</style>
