--- a/PRC-999K.html
+++ b/PRC-999K.html
@@ -640,7 +640,10 @@
 
   }
   .wiki-edit-section{
-    display:none;
+    float: right;
+    font-size: 14px;
+    font-weight: 500;
+
   }
   a {
 
