위키 본문 css 따로 뺌

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>foobar</title>
   <link rel="styleseet" href="dist/index.css">
+  <!--위에꺼 뭐임...?-->
+  <link rel="stylesheet" type="text/css" href="./src/css/wikiDocument.css">
 </head>
 <body>
 
