--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 <div id="app">
    <main></main>
 </div>
-<script src="dist/build.js"></script>
+<script src="/dist/build.js"></script>
 </body>
 </html>
