이미지 및 CSS 출력 안되던 거 고침.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>foobar</title>
   <link rel="styleseet" href="dist/index.css">
   <!--위에꺼 뭐임...?-->
-  <link rel="stylesheet" type="text/css" href="./src/css/wikiDocument.css">
+  <link rel="stylesheet" type="text/css" href="../src/css/wikiDocument.css">
 </head>
 <body>
 
