--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>foobar</title>
+  <title>국방위키</title>
   <link rel="styleseet" href="dist/index.css">
   <!--위에꺼 뭐임...?-->
   <link rel="stylesheet" type="text/css" href="../src/css/wikiDocument.css">
